/ fixed db issues --- Everything works as intended